Updated Paid app list

--- a/content/blog/2020-01-10-paid-apps.md
+++ b/content/blog/2020-01-10-paid-apps.md
@@ -1,10 +1,11 @@
 +++
 title = "Paid apps"
-date = "2022-12-26"
+date = "2022-01-02"
 draft = false
 +++
 
 I pay for the following apps...
+- [Grammarly](grammarly.com)
 - Todoist
 - [Notability](https://notability.com/)
 - Google One
@@ -12,4 +13,4 @@ I pay for the following apps...
 - Youtube Premium
 - Amazon Prime
 
-*Last Updated at : 26th Dec 2022*
+*Last Updated at : 02nd Jan 2023*
