Updated grammarly website

--- a/content/blog/2020-01-10-paid-apps.md
+++ b/content/blog/2020-01-10-paid-apps.md
@@ -5,7 +5,7 @@ draft = false
 +++
 
 I pay for the following apps...
-- [Grammarly](grammarly.com)
+- [Grammarly](https://grammarly.com)
 - Todoist
 - [Notability](https://notability.com/)
 - Google One
